# django-rest-framework-mango

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
.github/: publish.yml
.github/workflows/: publish.yml
django_rest_framework_mango/: middlewares.py  mixins.py
