[metadata]
name = django-rest-framework-mango
version = 0.2
author = Jun Young Lee
author_email = legshort@gmail.com
description=A set of viewset mixin for the Django REST Framework.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/legshort/django-rest-framework-mango/
